Firefox Bug - Weather Description text wrap

--- a/src/css/main-rotated.css
+++ b/src/css/main-rotated.css
@@ -46,9 +46,10 @@ body {
     display:flex;
     font-size:4em;
     text-align: right;
-    line-height: 1.3em;
+    line-height: 1em;
     right: -10%;
     margin-top:-10%;
+    white-space: nowrap;
 }
 
 .temperature-col {
